src/components/monthView/MonthView.scss
@use "sass:math";

@import '../../styles/colors';

$month_view__width: math.div(100%, 7);
$month_view__height: math.div(100%, 6);

.Kalend__MonthView__container {
  flex-direction: row;
  flex-wrap: wrap;
  width: 100%;
  height: 100%;
  display: flex;
  align-self: stretch;
  padding: 0;
  margin: 0;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
}

.Kalend__Monthview_Event {
  max-height: 16px !important;
  min-height: 16px;
  margin-top: 1px;
}

